// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dashboard page unchanged 1`] = `
<div>
  <article
    class="h-[120vh] p-4"
  >
    <div
      class="grid grid-cols-1 items-center gap-6 md:grid-cols-2 md:gap-4"
    >
      <div>
        <button
          class="border-2 py-2.5 px-6 transition duration-100 ease-in bg-primary-950 border-primary-950 dark:bg-primary-300 dark:hover:bg-primary-400 dark:text-primary-950 hover:bg-primary-850 hover:border-primary-850 dark:border-primary-300 dark:hover:border-primary-400 text-white rounded-md text-base font-medium"
          type="button"
        >
          <span
            class="flex flex-row items-center justify-center gap-2 text-sm font-normal"
          >
            <svg
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4v16m8-8H4"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Create
          </span>
        </button>
      </div>
      <h2
        class="text-primary-950 text-3xl font-bold"
      >
        Today
      </h2>
    </div>
  </article>
</div>
`;

exports[`renders error 404 page unchanged 1`] = `
<div>
  <div
    class="flex h-screen w-full flex-col items-center justify-center gap-6"
  >
    <div
      class="flex flex-row justify-center gap-4 text-lg text-gray-800"
    >
      <h2
        class="font-bold"
      >
        404
      </h2>
      <h2>
        |
      </h2>
      <h2>
        This page could not be found.
      </h2>
    </div>
    <a
      class="hover:border-primary-600 text-primary-700 hover:text-primary-600 flex flex-row items-center justify-center gap-3 border-b border-transparent pb-2 hover:border-dashed"
      href="/"
    >
      <svg
        class="h-6 w-6"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 19l-7-7m0 0l7-7m-7 7h18"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span>
        Back To Homepage
      </span>
    </a>
  </div>
</div>
`;

exports[`renders homepage unchanged 1`] = `
<div>
  <article
    class="bg-primary-50 py-16"
  >
    <h3
      class="text-center text-2xl font-bold text-gray-800"
    >
      Welcome to
    </h3>
    <h1
      class="text-primary-900 mt-1 mb-8 text-center text-4xl font-bold"
    >
      Sistem Informasi Penjadwalan Rapat
    </h1>
    <div
      class="mx-auto grid w-full grid-cols-1 items-center justify-center gap-8 px-4 md:w-96 md:grid-cols-2"
    >
      <a
        class="hover:text-primary-500 text-primary-700 underline"
        href="/register"
      >
        <button
          class="border-2 py-2.5 px-6 transition duration-100 ease-in border-primary-950 dark:border-primary-300 hover:text-primary-850 hover:border-primary-850 dark:text-primary-300 dark:hover:bg-primary-300 bg-transparent text-gray-900 hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-20  w-full rounded-md text-base font-medium"
          type="button"
        >
          Register
        </button>
      </a>
      <a
        class="hover:text-primary-500 text-primary-700 underline"
        href="/login"
      >
        <button
          class="border-2 py-2.5 px-6 transition duration-100 ease-in bg-primary-950 border-primary-950 dark:bg-primary-300 dark:hover:bg-primary-400 dark:text-primary-950 hover:bg-primary-850 hover:border-primary-850 dark:border-primary-300 dark:hover:border-primary-400 text-white w-full rounded-md text-base font-medium"
          type="button"
        >
          Login
        </button>
      </a>
    </div>
  </article>
</div>
`;

exports[`renders login page unchanged 1`] = `
<div>
  <article
    class="flex min-h-screen flex-row items-center justify-center bg-black bg-opacity-50"
  >
    <div
      class="w-4/5 rounded-md bg-white p-12 md:w-2/5 lg:w-1/4"
    >
      <a
        class="hover:text-primary-500 text-primary-700"
        href="/"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 19l-7-7m0 0l7-7m-7 7h18"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </a>
      <h2
        class="text-primary-900 text-center text-4xl font-bold"
      >
        SIPR
      </h2>
      <h1
        class="text-center text-lg font-medium"
      >
        Welcome back!
      </h1>
      <form
        class="mt-6"
      >
        <div
          class="grid grid-cols-1 gap-4 md:gap-5"
        >
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="email"
            >
              Email
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="email"
              name="email"
              type="text"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="password"
            >
              Password
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="password"
              name="password"
              type="password"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
        </div>
        <div
          class="mx-auto mt-6 flex w-full flex-row justify-center"
        >
          <button
            class="border-2 py-2.5 px-6 transition duration-100 ease-in bg-primary-950 border-primary-950 dark:bg-primary-300 dark:hover:bg-primary-400 dark:text-primary-950 hover:bg-primary-850 hover:border-primary-850 dark:border-primary-300 dark:hover:border-primary-400 text-white w-full rounded-lg text-base font-medium"
            type="submit"
          >
            Login
          </button>
        </div>
      </form>
      <p
        class="mt-8 text-center text-gray-800"
      >
        Need an account?
         
        <a
          class="hover:text-primary-500 text-primary-700 underline"
          href="/register"
        >
          Register
        </a>
      </p>
      <p
        class="mt-2 text-center text-gray-800"
      >
        Forgot your password?
         
        <a
          class="hover:text-primary-500 text-primary-700 underline"
          href="/reset-password"
        >
          Reset Password
        </a>
      </p>
    </div>
  </article>
</div>
`;

exports[`renders register page unchanged 1`] = `
<div>
  <article
    class="flex min-h-screen flex-row items-center justify-center bg-black bg-opacity-50"
  >
    <div
      class="w-4/5 rounded-md bg-white p-12 md:w-3/5 lg:w-2/5"
    >
      <a
        class="hover:text-primary-500 text-primary-700"
        href="/"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 19l-7-7m0 0l7-7m-7 7h18"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </a>
      <h2
        class="text-primary-900 text-center text-4xl font-bold"
      >
        SIPR
      </h2>
      <h1
        class="text-center text-lg font-medium"
      >
        Create your free account
      </h1>
      <form
        class="mt-6"
      >
        <div
          class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-5"
        >
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="name"
            >
              Name
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="name"
              name="name"
              type="text"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="email"
            >
              Email
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="email"
              name="email"
              type="text"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="password"
            >
              Password
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="password"
              name="password"
              type="password"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="confirmPassword"
            >
              Confirm Password
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="confirmPassword"
              name="confirmPassword"
              type="password"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="username"
            >
              Username
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="username"
              name="username"
              type="text"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
          <div
            class="flex flex-col justify-start gap-1"
          >
            <label
              class="text-sm font-medium text-gray-700"
              for="address"
            >
              Address
            </label>
            <input
              class="rounded-lg sm:text-sm focus:border-primary-850 focus:ring-primary-850 border-gray-300"
              id="address"
              name="address"
              type="text"
            />
            <div>
              <p
                class="text-xs text-gray-500"
              />
            </div>
          </div>
        </div>
        <div
          class="mx-auto mt-6 flex w-full flex-row justify-center md:w-2/3 lg:w-1/2"
        >
          <button
            class="border-2 py-2.5 px-6 transition duration-100 ease-in bg-primary-950 border-primary-950 dark:bg-primary-300 dark:hover:bg-primary-400 dark:text-primary-950 hover:bg-primary-850 hover:border-primary-850 dark:border-primary-300 dark:hover:border-primary-400 text-white w-full rounded-lg text-base font-medium"
            type="submit"
          >
            Register
          </button>
        </div>
      </form>
      <p
        class="mt-8 text-center text-gray-800"
      >
        Already have an account?
         
        <a
          class="hover:text-primary-500 text-primary-700 underline"
          href="/login"
        >
          Login
        </a>
      </p>
    </div>
  </article>
</div>
`;
